--- a/index.html
+++ b/index.html
@@ -2,60 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 viewport-fit=cover"
     />
-    <title>Frontend Mentor | FAQ Accordion Card</title>
+    <title>FAQ Accordion Card</title>
+    <meta name="description" content="Frontend mentors faq challenge" />
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="./images/favicon-32x32.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div class="container">
-      <div class="image_sidebar">
-        <img class="box_img" src="./images/illustration-box-desktop.svg" />
-      </div>
-      <div class="faq_sidebar">
+      <div class="image_container"></div>
+
+      <div class="faq_container">
         <h1 class="faq">FAQ</h1>
-        <ul class="questions">
-          <li class="question">How many team members can I invite?</li>
-          <li class="answer">
+        <details class="questions">
+          <summary class="question">
+            How many team members can I invite?
+          </summary>
+          <p class="answer">
             You can invite up to 2 additional users on the Free plan. There is
             no limit on team members for the Premium plan.
-          </li>
-        </ul>
-        <ul class="questions">
-          <li class="question">What is the maximum file upload size?</li>
-          <li class="answer">
+          </p>
+        </details>
+        <details class="questions">
+          <summary class="question">
+            What is the maximum file upload size?
+          </summary>
+          <p class="answer">
             No more than 2GB. All files in your account must fit your allotted
             storage space.
-          </li>
-        </ul>
-        <ul class="questions">
-          <li class="question">How do I reset my password?</li>
-          <li class="answer">
+          </p>
+        </details>
+        <details class="questions">
+          <summary class="question">How do I reset my password?</summary>
+          <p class="answer">
             Click “Forgot password” from the login page or “Change password”
             from your profile page. A reset link will be emailed to you.
-          </li>
-        </ul>
-        <ul class="questions">
-          <li class="question">Can I cancel my subscription?</li>
-          <li class="answer">
+          </p>
+        </details>
+        <details class="questions">
+          <summary class="question">Can I cancel my subscription?</summary>
+          <p class="answer">
             Yes! Send us a message and we’ll process your request no questions
             asked.
-          </li>
-        </ul>
-        <ul class="questions">
-          <li class="question">Do you provide additional support?</li>
-          <li class="answer">
+          </p>
+        </details>
+        <details class="questions">
+          <summary class="question">Do you provide additional support?</summary>
+          <p class="answer">
             Chat and email support is available 24/7. Phone lines are open
             during normal business hours.
-          </li>
-        </ul>
+          </p>
+        </details>
       </div>
     </div>
     <div class="attribution">
