--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="image_container"></div>
+      <div class="image_container">&nbsp;</div>
 
       <div class="faq_container">
         <h1 class="faq">FAQ</h1>
